feat: delete modules by device (#24)
* feat: delete modules by device

* fix: header formatting and parsing

* fix: broken test case for empty modules

* chore: lint

* chore: cleanup

* chore: cleanup

* fix: path for delete

* fix: missing trailing slashes
